--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <div id="map"></div>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15.11/cartodb.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <script src="leaflet.elevation-0.0.4.min.js"></script>
