--- a/embed.html
+++ b/embed.html
@@ -1,1 +1,1 @@
-<iframe width="100%" height="520" frameborder="0" src="https://team.carto.com/u/aromeu/builder/dd248664-21ef-11e7-b6ed-0ecd1babdde5/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+<iframe width="100%" height="100%" frameborder="0" src="https://team.carto.com/u/aromeu/builder/dd248664-21ef-11e7-b6ed-0ecd1babdde5/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
